# little-gemma

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  paper.tex
bench/: asr_leg_vs_length.py  bench-serve-orin.sh  bench-serve.ps1  clause_cases.txt  clause_pipe.py  consolidation_samples.jsonl  gen-fig-session-aging.py  gen-fig-ttfb-vs-length.py  img-decode.ps1  img-decode.sh  line929s.txt  mempeak.sh  mtp-accept.ps1  mtp-pos-ab.sh  mtp-serve.ps1  piper_mem.py  probe_dictate.c  s2s_probe.py  session_age.py  settle-bench.ps1  settle-bench.sh  ttfb_audio.py  ttfb_vs_length.py  ttfc_dictate.c  ttft_dictate.py  tts_stream_time.py  tts_time.py
docs/: architecture.md  benchmarks.md  consolidation-finetune.md  design-notes.md  dictation-timing.html  fluent_and_cohesive.tex  gen-fig-ttfb-vs-length.py  mood-metadata.md  mtp.md  multimodal.md  orin-power-consumption.md  paper-candidates.md  paper-draft.md  paper.tex  performance-journal.md  prefill-performance-journal.md  prefill-vs-ttft.md  seminar.md  serving.md  stream-k-experiment.md  upstream-llama-study.md  voice-pipeline.md  voice-sys.txt  vulkan-backend-journal.md
include/: gguf.h  graph.h  llama-mmq.h  media.h  model.h  quant.h  tokenizer.h
paper/: arxiv.sty  paper-draft.md  paper.tex
src/: gguf.c  graph.c  llama-mmq.cu  media-cuda.cu  media-internal.h  media.c  model-cpu.c  model-cuda-common.cuh  model-cuda-f32.cu  model-cuda-i8.cu  model-cuda-i8r.cu  model-cuda.cu  model-cuda.cuh  model.c  mtp-internal.h  mtp.c  quant.c  run.c  tokenizer.c
src/cpu/: media-gpu-stub.c  model-cpu.c
src/cuda/: media-cuda.cu  media-kernel.cu  model-cuda-f32.cu  model-cuda-i8.cu  model-cuda.cuh  mtp-cuda.cuh  mtp-kernel.cuh  prefill-kernel.cuh
src/vulkan/: model-vulkan.c  vk-compute.c  vk-compute.h
src/vulkan/shaders/: matmul.comp
test/: graph_test.c
tools/: media_cat.c  runcat.py  socket_cat.c
